fix: refactor event endpoint
