# src/controllers/event.controller.ts
@@ -1,13 +1,13 @@
 import { Response } from "express";
 import { IpaginationQuery, IreqUser } from "../utils/interface";
 import response from "../utils/response";
-import eventModel, { eventDAO, TEvent } from "../models/event.model";
+import eventModel, { eventDAO, TypeEvent } from "../models/event.model";
 import { FilterQuery, isValidObjectId } from "mongoose";
 
 export default {
   async create(req: IreqUser, res: Response) {
     try {
-      const payload = { ...req.body, createdBy: req.user?.id } as TEvent;
+      const payload = { ...req.body, createdBy: req.user?.id } as TypeEvent;
       await eventDAO.validate(payload);
       const result = await eventModel.create(payload);
       response.success(res, result, "Success create an event");
@@ -17,24 +17,40 @@ export default {
   },
   async findAll(req: IreqUser, res: Response) {
     try {
+      const buildQuery = (filter: any) => {
+        let query: FilterQuery<TypeEvent> = {};
+
+        if (filter.search) query.$text = { $search: filter.search };
+        if (filter.category) query.category = filter.category;
+        if (filter.isOnline) query.isOnline = filter.isOnline;
+        if (filter.isPublish) query.isPublish = filter.isPublish;
+        if (filter.isFeature) query.isFeature = filter.isFeature;
+
+        return query;
+      };
+
       const {
         limit = 10,
         page = 1,
         search,
-      } = req.query as unknown as IpaginationQuery;
-      const query: FilterQuery<TEvent> = {};
-      if (search) {
-        Object.assign(query, {
-          ...query,
-          $text: {
-            $search: search,
-          },
-        });
-      }
+        category,
+        isOnline,
+        isFeature,
+        isPublish,
+      } = req.query;
+
+      const query = buildQuery({
+        search,
+        category,
+        isPublish,
+        isFeature,
+        isOnline,
+      });
+
       const result = await eventModel
         .find(query)
-        .limit(limit)
-        .skip((page - 1) * limit)
+        .limit(+limit)
+        .skip((+page - 1) * +limit)
         .sort({ createdAt: -1 })
         .exec();
       const count = await eventModel.countDocuments(query);
@@ -42,9 +58,9 @@ export default {
         res,
         result,
         {
-          current: page,
+          current: +page,
           total: count,
-          totalPages: Math.ceil(count / limit),
+          totalPages: Math.ceil(count / +limit),
         },
         "Success fetch all events",
       );
